<resources>
    <string name="app_name">SchoolReminder</string>
    <string name="open_in">Open in</string>
    <string name="are_you_ready_for_exams">Are you ready for exams?</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="classes">Classes</string>
    <string name="message">Message</string>
    <string name="favorite">Favorite</string>
</resources>