<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/radius_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            style="@style/alert_box">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"
                android:text="@string/are_you_ready_for_exams"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/card_time_day1"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1"
                tools:ignore="RtlCompat" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_time_day1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/card_time_day2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/alert_box_dark"
                android:layout_width="@dimen/time_width"
                android:layout_height="@dimen/time_height">
                <TextView
                    android:id="@+id/day_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@drawable/gradient_attention_dark"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="@dimen/time_text"/>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_time_day2"
                android:layout_width="@dimen/time_width"
                android:layout_height="@dimen/time_height"
                style="@style/alert_box_dark"
                app:cardCornerRadius="@dimen/radius_time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/card_time_hour1"
                app:layout_constraintStart_toEndOf="@+id/card_time_day1"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/day_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@drawable/gradient_attention_dark"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="@dimen/time_text" />

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_margin="10dp"
                android:text="@string/days"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/exam_text_dhm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/card_time_day2"
                app:layout_constraintStart_toStartOf="@+id/card_time_day1"
                app:layout_constraintTop_toBottomOf="@+id/card_time_day1"
                app:layout_constraintVertical_bias="0.001"
                tools:ignore="RtlCompat" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_time_hour1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/card_time_hour2"
                app:layout_constraintStart_toEndOf="@+id/card_time_day2"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/alert_box_dark"
                android:layout_marginStart="20dp"
                android:layout_width="@dimen/time_width"
                android:layout_height="@dimen/time_height">
                <TextView
                    android:id="@+id/hourse_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@drawable/gradient_attention_dark"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="@dimen/time_text"/>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_time_hour2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/card_time_minute1"
                app:layout_constraintStart_toEndOf="@+id/card_time_hour1"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/alert_box_dark"
                android:layout_width="@dimen/time_width"
                android:layout_height="@dimen/time_height">
                <TextView
                    android:id="@+id/hourse_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@drawable/gradient_attention_dark"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="@dimen/time_text"/>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_margin="10dp"
                android:text="@string/hours"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/exam_text_dhm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/card_time_hour2"
                app:layout_constraintStart_toStartOf="@+id/card_time_hour1"
                app:layout_constraintTop_toBottomOf="@+id/card_time_hour1"
                app:layout_constraintVertical_bias="0.001"
                tools:ignore="RtlCompat" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_time_minute1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/card_time_minute2"
                app:layout_constraintStart_toEndOf="@+id/card_time_hour2"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/alert_box_dark"
                android:layout_marginStart="20dp"
                android:layout_width="@dimen/time_width"
                android:layout_height="@dimen/time_height">
                <TextView
                    android:id="@+id/minutes_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@drawable/gradient_attention_dark"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="@dimen/time_text"/>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_time_minute2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/card_time_minute1"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/alert_box_dark"
                android:layout_width="@dimen/time_width"
                android:layout_height="@dimen/time_height">
                <TextView
                    android:id="@+id/minutes_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@drawable/gradient_attention_dark"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="@dimen/time_text"/>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="10dp"
                android:text="@string/minutes"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/exam_text_dhm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/card_time_minute2"
                app:layout_constraintStart_toStartOf="@+id/card_time_minute1"
                app:layout_constraintTop_toBottomOf="@+id/card_time_minute1"
                app:layout_constraintVertical_bias="0.001"
                tools:ignore="RtlCompat" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>